fix css nav (z-index) on enimory page

--- a/css/core-layout.css
+++ b/css/core-layout.css
@@ -34,6 +34,7 @@
 
 .nav {
     position: absolute;
+    z-index: 100;
     top: -100%;
     transform-origin: top;
     inset-inline: 0;
